New changes for mail

--- a/index.html
+++ b/index.html
@@ -140,6 +140,47 @@
         </div>
     </section>
 
+    <!-- Why Choose Us Section -->
+    <section id="why-choose-us" class="why-choose-us section">
+        <div class="container">
+            <div class="section-header centered">
+                <h2 class="section-title">Why choose Rovers Vacations</h2>
+                <p class="section-subtitle">We provide exceptional service and unforgettable experiences that set us
+                    apart from the rest.</p>
+            </div>
+            <div class="features-grid">
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <ion-icon name="shield-checkmark-outline"></ion-icon>
+                    </div>
+                    <h3>Safe & Secure</h3>
+                    <p>Your safety is our priority. We ensure all our trips meet the highest safety standards.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <ion-icon name="pricetag-outline"></ion-icon>
+                    </div>
+                    <h3>Best Price Guarantee</h3>
+                    <p>Get the best deals on your dream destinations with our competitive pricing.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <ion-icon name="headset-outline"></ion-icon>
+                    </div>
+                    <h3>24/7 Support</h3>
+                    <p>Our dedicated team is available round the clock to assist you anytime, anywhere.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <ion-icon name="star-outline"></ion-icon>
+                    </div>
+                    <h3>Expert Guides</h3>
+                    <p>Travel with experienced guides who know every corner of your destination.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Best Trip Package -->
     <section id="packages" class="packages section">
         <div class="container">
@@ -229,6 +270,70 @@
         </div>
     </section>
 
+    <!-- Gallery Section -->
+    <section id="gallery" class="gallery section">
+        <div class="container">
+            <div class="section-header centered">
+                <h2 class="section-title">Travel Gallery</h2>
+                <p class="section-subtitle">Explore stunning moments captured from our travelers' adventures around the
+                    world.</p>
+            </div>
+            <div class="gallery-grid">
+                <div class="gallery-item">
+                    <img src="assets/images/package1.png" alt="Gallery 1">
+                    <div class="gallery-overlay">
+                        <ion-icon name="expand-outline"></ion-icon>
+                    </div>
+                </div>
+                <div class="gallery-item">
+                    <img src="assets/images/package2.png" alt="Gallery 2">
+                    <div class="gallery-overlay">
+                        <ion-icon name="expand-outline"></ion-icon>
+                    </div>
+                </div>
+                <div class="gallery-item">
+                    <img src="assets/images/package3.png" alt="Gallery 3">
+                    <div class="gallery-overlay">
+                        <ion-icon name="expand-outline"></ion-icon>
+                    </div>
+                </div>
+                <div class="gallery-item">
+                    <img src="assets/images/slide1.jpg" alt="Gallery 4">
+                    <div class="gallery-overlay">
+                        <ion-icon name="expand-outline"></ion-icon>
+                    </div>
+                </div>
+                <div class="gallery-item">
+                    <img src="assets/images/slide 2.jpg" alt="Gallery 5">
+                    <div class="gallery-overlay">
+                        <ion-icon name="expand-outline"></ion-icon>
+                    </div>
+                </div>
+                <div class="gallery-item">
+                    <img src="assets/images/slide 3.jpg" alt="Gallery 6">
+                    <div class="gallery-overlay">
+                        <ion-icon name="expand-outline"></ion-icon>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Newsletter Section -->
+    <section id="newsletter" class="newsletter section">
+        <div class="container">
+            <div class="newsletter-content">
+                <div class="newsletter-text">
+                    <h2>Subscribe to our Newsletter</h2>
+                    <p>Get the latest travel deals, tips, and destination guides delivered to your inbox.</p>
+                </div>
+                <form class="newsletter-form" id="newsletterForm">
+                    <input type="email" id="newsletter_email" placeholder="Enter your email" required>
+                    <button type="submit" class="btn btn-primary">Subscribe</button>
+                </form>
+            </div>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer class="footer">
